update plan get started button function

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -148,6 +148,7 @@ $WorkSans: 'Work Sans', sans-serif;
 }
 body {
   background-color: #03051b !important;
+  scroll-behavior: smooth;
 }
 //define buttons
 .login {
