--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2722,6 +2722,12 @@ body {
         }
         &.servers {
           text-align: center;
+          .ui.grid {
+            justify-content: center;
+            .computer.column {
+              width: 33.33%;
+            }
+          }
           h2 {
             color: #fff;
           }
@@ -2828,6 +2834,7 @@ body {
         h5 {
           color: #9da6c7;
           font-size: 15px;
+          font-family: "Gotham Bold";
         }
         p {
           color: #9da6c7;
@@ -7599,9 +7606,6 @@ body {
             margin-top: -320px;
             h2 {
               padding: 50px 250px;
-            }
-            .custom-col-8 {
-              padding: 0px 150px;
             }
           }
           &.questions {
