update font-family of wp-service page section sub title

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3368,7 +3368,7 @@ body {
 .page .main .wpservice-page .wpservice-section h5 {
   color: #9da6c7;
   font-size: 15px;
-  font-family: "Gotham Bold";
+  font-family: "Gotham Book";
 }
 
 .page .main .wpservice-page .wpservice-section p {
