--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2838,7 +2838,7 @@ body {
         h5 {
           color: #9da6c7;
           font-size: 15px;
-          font-family: "Gotham Bold";
+          font-family: "Gotham Book";
         }
         p {
           color: #9da6c7;
