--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3187,7 +3187,7 @@ body {
                   }
                 }
                 .answer-tag {
-                  display: block;
+                  max-height: 40px;
                 }
               }
               .question-tag {
@@ -3210,9 +3210,12 @@ body {
               }
               .answer-tag {
                 text-align: left;
-                display: none;
+                transition: max-height 280ms cubic-bezier(0.4, 0, 0.2, 1);
+                max-height: 0;
+                overflow: hidden;
                 color: #f7f3fe;
                 padding-right: 50px;
+                font-family: "Gotham Book";
               }
             }
           }
